feat: gen sample
